--- a/flashcard_app/package.json
+++ b/flashcard_app/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch ./data/db.json --port 3008"
+    "server": "json-server --watch ./data/db.json --port 3008 --static ./docs/api"
   },
   "eslintConfig": {
     "extends": [
